// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`MotionIndicatorComponentEditor > should render correctly 1`] = `
<div>
  <div
    class="awsui_root_18582_z63vw_99 awsui_vertical_18582_z63vw_146 awsui_vertical-s_18582_z63vw_158"
  >
    <div
      class="awsui_child_18582_z63vw_103"
    >
      <div
        class="awsui_root_14mhv_av9zi_174"
        data-analytics-field-label="[id="formField:r0:-label"]"
      >
        <div
          class=""
        >
          <label
            class="awsui_label_14mhv_av9zi_210"
            for="formField:r0:"
            id="formField:r0:-label"
          >
            Indicator shape
          </label>
        </div>
        <div
          class="awsui_controls_14mhv_av9zi_246"
        >
          <div
            class="awsui_grid_14yj0_1lwse_99"
          >
            <div
              class="awsui_grid-column_14yj0_1lwse_143 awsui_colspan-12_14yj0_1lwse_264"
            >
              <div
                class="awsui_restore-pointer-events_14yj0_1lwse_314"
              >
                <div
                  class="awsui_control_14mhv_av9zi_246"
                >
                  <div
                    class="awsui_root_r2vco_wvvus_99"
                    data-testid="motion-indicator-shape-select"
                  >
                    <div
                      class="awsui_root_qwoo0_1ea5w_149"
                    >
                      <div
                        class=""
                        id=":r6:"
                      >
                        <button
                          aria-expanded="false"
                          aria-haspopup="listbox"
                          aria-labelledby="formField:r0:-label select-arialabel-:r4: trigger-content-:r8:"
                          class="awsui_button-trigger_18eso_syr88_103 awsui_has-caret_18eso_syr88_170"
                          id="formField:r0:"
                          type="button"
                        >
                          <span
                            class="awsui_trigger_dwuol_18z0d_122"
                            id="trigger-content-:r8:"
                          >
                            Linear Plane
                          </span>
                          <span
                            class="awsui_arrow_18eso_syr88_103"
                          >
                            <span
                              class="awsui_icon_h11ix_1l964_104 awsui_size-normal-mapped-height_h11ix_1l964_158 awsui_size-normal_h11ix_1l964_154 awsui_variant-normal_h11ix_1l964_230"
                            >
                              <svg
                                aria-hidden="true"
                                focusable="false"
                                viewBox="0 0 16 16"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  class="filled stroke-linejoin-round"
                                  d="M4 5h8l-4 6-4-6z"
                                />
                              </svg>
                            </span>
                          </span>
                        </button>
                      </div>
                      <div
                        tabindex="-1"
                      />
                      <div>
                        <div
                          tabindex="-1"
                        />
                        <div
                          aria-hidden="true"
                          class="awsui_dropdown_qwoo0_1ea5w_99 awsui-visual-refresh awsui_hide-block-border_qwoo0_1ea5w_281 awsui_refresh_qwoo0_1ea5w_120 awsui_stretch-beyond-trigger-width_qwoo0_1ea5w_277"
                          data-animating="false"
                          data-open="false"
                          id="dialog:r3:"
                          style="--awsui-dropdown-default-max-width-iof9y8: 465px;"
                        >
                          <div
                            class="awsui_dropdown-content-wrapper_qwoo0_1ea5w_99 awsui_refresh_qwoo0_1ea5w_120"
                          >
                            <div
                              class="awsui_dropdown-content_qwoo0_1ea5w_99"
                            >
                              <ul
                                aria-labelledby="select-arialabel-:r4: formField:r0:"
                                class="awsui_options-list_19gcf_halkh_99"
                                id="option-list:r2:"
                                role="listbox"
                                style="position: relative;"
                                tabindex="-1"
                              />
                              <div
                                class="awsui_root_1afi9_5kqbd_99 awsui_hidden_1afi9_5kqbd_133"
                              >
                                <div
                                  id="footer:r5:"
                                />
                                <span
                                  class="awsui_root_xttbq_pgwjg_99 awsui_root_3bgfn_im8v7_5"
                                >
                                  <span
                                    aria-atomic="true"
                                    aria-live="polite"
                                  />
                                </span>
                              </div>
                            </div>
                          </div>
                        </div>
                        <div
                          tabindex="-1"
                        />
                      </div>
                    </div>
                    <span
                      class="awsui_root_xttbq_pgwjg_99"
                      id="select-arialabel-:r4:"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="awsui_child_18582_z63vw_103"
    >
      <hr
        class="sc-aXZVg dUMFjc"
      />
    </div>
    <div
      class="awsui_child_18582_z63vw_103"
    >
      <div
        id="SpeedEditor"
      >
        [{"component":{"ref":"componentRef1","type":"MotionIndicator","uri":"componentUri","modelType":"componentModelType","shape":"LinearPlane","valueDataBindings":{},"config":{"numOfRepeatInY":4,"backgroundColorOpacity":0.5}}},{}]
      </div>
    </div>
    <div
      class="awsui_child_18582_z63vw_103"
    >
      <hr
        class="sc-aXZVg dUMFjc"
      />
    </div>
    <div
      class="awsui_child_18582_z63vw_103"
    >
      <div
        id="AppearanceEditor"
      >
        [{"component":{"ref":"componentRef1","type":"MotionIndicator","uri":"componentUri","modelType":"componentModelType","shape":"LinearPlane","valueDataBindings":{},"config":{"numOfRepeatInY":4,"backgroundColorOpacity":0.5}},"scale":[0,0,0]},{}]
      </div>
    </div>
  </div>
</div>
`;

exports[`MotionIndicatorComponentEditor > should render correctly 2`] = `
<div>
  <div
    class="awsui_root_18582_jftqg_97 awsui_vertical_18582_jftqg_144 awsui_vertical-s_18582_jftqg_156"
  >
    <div
      class="awsui_child_18582_jftqg_101"
    >
      <div
        class="awsui_root_14mhv_1rcjl_184"
        data-analytics-field-label="[id="formField:r9:-label"]"
      >
        <div
          class="awsui_label-wrapper_14mhv_1rcjl_260"
        >
          <label
            class="awsui_label_14mhv_1rcjl_220"
            for="formField:r9:"
            id="formField:r9:-label"
          >
            Indicator shape
          </label>
        </div>
        <div
          class="awsui_controls_14mhv_1rcjl_257"
        >
          <div
            class="awsui_grid_14yj0_xuaq6_97"
          >
            <div
              class="awsui_grid-column_14yj0_xuaq6_141 awsui_colspan-12_14yj0_xuaq6_262"
            >
              <div
                class="awsui_restore-pointer-events_14yj0_xuaq6_312"
              >
                <div
                  class="awsui_control_14mhv_1rcjl_257"
                >
                  <div
                    class="awsui_root_r2vco_1byz9_97"
                    data-testid="motion-indicator-shape-select"
                  >
                    <div
                      class="awsui_root_qwoo0_vokdv_147"
                    >
                      <div
                        class=""
                        id=":rf:"
                      >
                        <button
                          aria-expanded="false"
                          aria-haspopup="listbox"
                          aria-labelledby="formField:r9:-label select-arialabel-:rd: trigger-content-:rh:"
                          class="awsui_button-trigger_18eso_m2fj5_101 awsui_has-caret_18eso_m2fj5_168"
                          id="formField:r9:"
                          type="button"
                        >
                          <span
                            class="awsui_trigger_dwuol_1bifm_120"
                            id="trigger-content-:rh:"
                          >
                            Linear Plane
                          </span>
                          <span
                            class="awsui_arrow_18eso_m2fj5_101"
                          >
                            <span
                              class="awsui_icon_h11ix_ayzd6_101 awsui_size-normal-mapped-height_h11ix_ayzd6_157 awsui_size-normal_h11ix_ayzd6_153 awsui_variant-normal_h11ix_ayzd6_229"
                            >
                              <svg
                                aria-hidden="true"
                                focusable="false"
                                viewBox="0 0 16 16"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  class="filled stroke-linejoin-round"
                                  d="M4 5h8l-4 6-4-6z"
                                />
                              </svg>
                            </span>
                          </span>
                        </button>
                      </div>
                      <div
                        tabindex="-1"
                      />
                      <div>
                        <div
                          tabindex="-1"
                        />
                        <div
                          aria-hidden="true"
                          class="awsui_dropdown_qwoo0_vokdv_97 awsui-visual-refresh awsui_hide-block-border_qwoo0_vokdv_270 awsui_refresh_qwoo0_vokdv_118 awsui_stretch-beyond-trigger-width_qwoo0_vokdv_263"
                          data-animating="false"
                          data-open="false"
                          id="dialog:rc:"
                          style="--awsui-dropdown-default-max-width-g964ok: 465px;"
                        >
                          <div
                            class="awsui_dropdown-content-wrapper_qwoo0_vokdv_97 awsui_refresh_qwoo0_vokdv_118"
                          >
                            <div
                              class="awsui_dropdown-content_qwoo0_vokdv_97"
                            >
                              <ul
                                aria-labelledby="select-arialabel-:rd: formField:r9:"
                                class="awsui_options-list_19gcf_kye0l_97"
                                id="option-list:rb:"
                                role="listbox"
                                style="position: relative;"
                                tabindex="-1"
                              />
                              <div
                                class="awsui_root_1afi9_1aapr_97 awsui_hidden_1afi9_1aapr_131"
                              >
                                <div
                                  class="awsui_source_3bgfn_64bxr_9"
                                  id="footer:re:"
                                />
                                <span
                                  class="awsui_root_xttbq_1fuh1_97 awsui_root_3bgfn_64bxr_5"
                                >
                                  <span
                                    aria-atomic="true"
                                    aria-live="polite"
                                  />
                                </span>
                              </div>
                            </div>
                          </div>
                        </div>
                        <div
                          tabindex="-1"
                        />
                      </div>
                    </div>
                    <span
                      class="awsui_root_xttbq_1fuh1_97"
                      id="select-arialabel-:rd:"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="awsui_child_18582_jftqg_101"
    >
      <hr
        class="sc-aXZVg dUMFjc"
      />
    </div>
    <div
      class="awsui_child_18582_jftqg_101"
    >
      <div
        id="SpeedEditor"
      >
        [{"component":{"ref":"componentRef1","type":"MotionIndicator","uri":"componentUri","modelType":"componentModelType","shape":"LinearPlane","valueDataBindings":{},"config":{"numOfRepeatInY":4,"backgroundColorOpacity":0.5}}},{}]
      </div>
    </div>
    <div
      class="awsui_child_18582_jftqg_101"
    >
      <hr
        class="sc-aXZVg dUMFjc"
      />
    </div>
    <div
      class="awsui_child_18582_jftqg_101"
    >
      <div
        id="AppearanceEditor"
      >
        [{"component":{"ref":"componentRef1","type":"MotionIndicator","uri":"componentUri","modelType":"componentModelType","shape":"LinearPlane","valueDataBindings":{},"config":{"numOfRepeatInY":4,"backgroundColorOpacity":0.5}},"scale":[0,0,0]},{}]
      </div>
    </div>
  </div>
</div>
`;

exports[`MotionIndicatorComponentEditor > should render correctly 3`] = `
<div>
  <div
    data-mocked="SpaceBetween"
  >
    <div
      data-mocked="FormField"
      label="Indicator shape"
    >
      <div
        data-mocked="Select"
        data-testid="motion-indicator-shape-select"
        options="[{"label":"Linear Plane","value":"LinearPlane"},{"label":"Linear Cylinder","value":"LinearCylinder"},{"label":"Circular Cylinder","value":"CircularCylinder"}]"
        placeholder="Choose a shape"
        selectedarialabel="Selected"
        selectedoption="{"label":"Linear Plane","value":"LinearPlane"}"
      />
    </div>
    <hr
      class="sc-aXZVg dUMFjc"
    />
    <div
      id="SpeedEditor"
    >
      [{"component":{"ref":"componentRef1","type":"MotionIndicator","uri":"componentUri","modelType":"componentModelType","shape":"LinearPlane","valueDataBindings":{},"config":{"numOfRepeatInY":4,"backgroundColorOpacity":0.5}}},{}]
    </div>
    <hr
      class="sc-aXZVg dUMFjc"
    />
    <div
      id="AppearanceEditor"
    >
      [{"component":{"ref":"componentRef1","type":"MotionIndicator","uri":"componentUri","modelType":"componentModelType","shape":"LinearPlane","valueDataBindings":{},"config":{"numOfRepeatInY":4,"backgroundColorOpacity":0.5}},"scale":[0,0,0]},{}]
    </div>
  </div>
</div>
`;
